# nullaprop

./: .gitignore  LICENSE  README.md  demo_noprop.ipynb  pyproject.toml  test_noprop.py
notebooks/: demo_noprop.ipynb
src/nullaprop/: __init__.py  experiments.py  inference.py  models.py  training.py  utils.py
tests/: test_ct_model.py  test_utils.py
